objects/Sales_University_Training__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assignor_ID__c</fullName>
        <label>Assignor ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSOD_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>CSOD_Ext_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CSOD_User_Id__c</fullName>
        <label>CSOD User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_SCO__c</fullName>
        <label>Completed SCO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <label>Course Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <label>Course ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LOID__c</fullName>
        <label>LOID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <label>Modification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrations__c</fullName>
        <label>Number of Registrations</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Number__c</fullName>
        <label>Page Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Change_Date__c</fullName>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Pages__c</fullName>
        <label>Total Pages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_SCO__c</fullName>
        <label>Total SCO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Views__c</fullName>
        <label>Total Views</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Time__c</fullName>
        <label>Training Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transcript_Status__c</fullName>
        <label>Transcript Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_University_Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales University Training</label>
    <nameField>
        <label>Sales University Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales University Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>